Fix warnings and minor code cleanup for sql-parser